force-app/main/default/objects/AccessCard__c/AccessCard__c.object-meta.xml
<CustomObject>
    <label>Access Card</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Access Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>