force-app/main/default/objects/AccessCard__c/fields/ActivatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivatedDateTime__c</fullName>
    <label>Activated Date Time</label>
    <type>DateTime</type>
</CustomField>