force-app/main/default/objects/AccessCard__c/fields/CancellationRemarks__c.field-meta.xml
<CustomField>
    <fullName>CancellationRemarks__c</fullName>
    <label>Cancellation Remarks</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>