force-app/main/default/objects/AccessCard__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lobby</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>