force-app/main/default/objects/AccessCard__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <defaultValue>&quot;Replace&quot;</defaultValue>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>