force-app/main/default/objects/AccessCard__c/fields/ResidentName__c.field-meta.xml
<CustomField>
    <fullName>ResidentName__c</fullName>
    <label>Resident Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>