force-app/main/default/objects/AccessCard__c/fields/SPAnumber__c.field-meta.xml
<CustomField>
    <fullName>SPAnumber__c</fullName>
    <label>SPA number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>