force-app/main/default/objects/AccessCard__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Access Cards</relationshipLabel>
    <relationshipName>Access_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>