force-app/main/default/objects/AccessCard__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>HHO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>