force-app/main/default/objects/AccessCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CardNumber__c</columns>
    <columns>CardType__c</columns>
    <columns>SPAnumber__c</columns>
    <columns>Status__c</columns>
    <columns>Unit__c</columns>
    <columns>UserType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>